Organizando o projeto e iniciando o server express

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "url": "git+https://github.com/StartBootstrap/startbootstrap-personal.git"
   },
   "dependencies": {
-    "bootstrap": "5.2.3"
+    "bootstrap": "5.2.3",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "autoprefixer": "10.4.14",
