--- a/package.json
+++ b/package.json
@@ -1,35 +1,46 @@
 {
-  "name": "banco",
-  "version": "1.0.0",
-  "description": "[Personal](https://startbootstrap.com/template/personal/) is a personal website template for [Bootstrap](https://getbootstrap.com/) created by [Start Bootstrap](https://startbootstrap.com/). This template includes 4 unique HTML pages and a working contact form built with [Start Bootstrap Froms](https://startbootstrap.com/solution/contact-forms).",
-  "main": "server.js",
+  "title": "Personal",
+  "name": "startbootstrap-personal",
+  "version": "1.0.1",
   "scripts": {
-    "dev": "nodemon server.js"
+      "start": "node scripts/start.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "description": "A personal website template built with Bootstrap",
+  "keywords": [
+      "css",
+      "sass",
+      "html",
+      "responsive",
+      "theme",
+      "template"
+  ],
+  "homepage": "https://startbootstrap.com/template-overviews/personal",
+  "bugs": {
+      "url": "https://github.com/StartBootstrap/startbootstrap-personal/issues",
+      "email": "feedback@startbootstrap.com"
+  },
+  "license": "MIT",
+  "author": "Start Bootstrap",
+  "contributors": [
+      "David Miller (https://davidmiller.io/)"
+  ],
+  "repository": {
+      "type": "git",
+      "url": "https://github.com/StartBootstrap/startbootstrap-personal.git"
+  },
   "dependencies": {
-<<<<<<< HEAD
-    "body-parser": "^1.20.2",
-    "express": "^4.18.2",
-    "nodemon": "^2.0.22"
-  }
-=======
-    "bootstrap": "5.2.3"
+      "bootstrap": "5.2.3"
   },
   "devDependencies": {
-    "autoprefixer": "10.4.14",
-    "browser-sync": "2.29.1",
-    "chokidar": "3.5.3",
-    "concurrently": "6.3.0",
-    "postcss": "8.4.21",
-    "prettier": "2.8.6",
-    "pug": "3.0.2",
-    "sass": "1.60.0",
-    "shelljs": "0.8.5",
-    "upath": "2.0.1"
-  },
-  "main": "index.js"
->>>>>>> parent of f536f2d (Organizando o projeto e iniciando o server express)
+      "autoprefixer": "10.4.14",
+      "browser-sync": "2.29.1",
+      "chokidar": "3.5.3",
+      "concurrently": "6.3.0",
+      "postcss": "8.4.21",
+      "prettier": "2.8.6",
+      "pug": "3.0.2",
+      "sass": "1.60.0",
+      "shelljs": "0.8.5",
+      "upath": "2.0.1"
+  }
 }
