--- a/package.json
+++ b/package.json
@@ -3,44 +3,46 @@
   "name": "startbootstrap-personal",
   "version": "1.0.1",
   "scripts": {
-      "start": "node scripts/start.js"
+    "start": "node scripts/start.js"
   },
   "description": "A personal website template built with Bootstrap",
   "keywords": [
-      "css",
-      "sass",
-      "html",
-      "responsive",
-      "theme",
-      "template"
+    "css",
+    "sass",
+    "html",
+    "responsive",
+    "theme",
+    "template"
   ],
   "homepage": "https://startbootstrap.com/template-overviews/personal",
   "bugs": {
-      "url": "https://github.com/StartBootstrap/startbootstrap-personal/issues",
-      "email": "feedback@startbootstrap.com"
+    "url": "https://github.com/StartBootstrap/startbootstrap-personal/issues",
+    "email": "feedback@startbootstrap.com"
   },
   "license": "MIT",
   "author": "Start Bootstrap",
   "contributors": [
-      "David Miller (https://davidmiller.io/)"
+    "David Miller (https://davidmiller.io/)"
   ],
   "repository": {
-      "type": "git",
-      "url": "https://github.com/StartBootstrap/startbootstrap-personal.git"
+    "type": "git",
+    "url": "https://github.com/StartBootstrap/startbootstrap-personal.git"
   },
   "dependencies": {
-      "bootstrap": "5.2.3"
+    "bootstrap": "5.2.3",
+    "pg": "^8.11.0",
+    "sequelize": "^6.32.1"
   },
   "devDependencies": {
-      "autoprefixer": "10.4.14",
-      "browser-sync": "2.29.1",
-      "chokidar": "3.5.3",
-      "concurrently": "6.3.0",
-      "postcss": "8.4.21",
-      "prettier": "2.8.6",
-      "pug": "3.0.2",
-      "sass": "1.60.0",
-      "shelljs": "0.8.5",
-      "upath": "2.0.1"
+    "autoprefixer": "10.4.14",
+    "browser-sync": "2.29.1",
+    "chokidar": "3.5.3",
+    "concurrently": "6.3.0",
+    "postcss": "8.4.21",
+    "prettier": "2.8.6",
+    "pug": "3.0.2",
+    "sass": "1.60.0",
+    "shelljs": "0.8.5",
+    "upath": "2.0.1"
   }
 }
